--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,8 @@
     "xstring": "cpp",
     "xtr1common": "cpp",
     "xutility": "cpp",
-    "string": "cpp"
+    "string": "cpp",
+    "vector": "cpp"
   },
   "makefile.launchConfigurations": [
     {
